--- a/app/src/main/res/layout/window_me_bank_location.xml
+++ b/app/src/main/res/layout/window_me_bank_location.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="191dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/background">
     
@@ -37,20 +37,20 @@
 
 	<LinearLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
+	    android:layout_height="wrap_content"
 	    android:orientation="horizontal"
 	    android:layout_gravity="center_horizontal">
 
 		<classes.widget.wheelview.WheelView
 			android:id="@+id/provinceWheelView"
 			android:layout_width="0dp"
-			android:layout_height="match_parent"
+			android:layout_height="wrap_content"
 			android:layout_weight="1"/>
 
 		<classes.widget.wheelview.WheelView
 			android:id="@+id/cityWheelView"
 			android:layout_width="0dp"
-			android:layout_height="match_parent"
+			android:layout_height="wrap_content"
 			android:layout_weight="1"/>
 	    
 	</LinearLayout>
