--- a/app/src/main/res/layout/window_me_bank_name.xml
+++ b/app/src/main/res/layout/window_me_bank_name.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="191dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/background">
     
@@ -38,6 +38,6 @@
     <classes.widget.wheelview.WheelView
         android:id="@+id/bankWheelView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
