--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -344,21 +344,21 @@
                 android:textColor="@color/font_major_dark"
                 android:textSize="16sp"/>
 
-            <include
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                layout="@layout/view_divider"/>
+            <!--<include-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="0.5dp"-->
+                <!--layout="@layout/view_divider"/>-->
 
-            <TextView
-                android:id="@+id/feedbackTextView"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/layout_height"
-                android:paddingLeft="16dp"
-                android:gravity="center_vertical"
-                android:background="@drawable/me_item_drawable"
-                android:text="@string/feedback"
-                android:textColor="@color/font_major_dark"
-                android:textSize="16sp"/>
+            <!--<TextView-->
+                <!--android:id="@+id/feedbackTextView"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="@dimen/layout_height"-->
+                <!--android:paddingLeft="16dp"-->
+                <!--android:gravity="center_vertical"-->
+                <!--android:background="@drawable/me_item_drawable"-->
+                <!--android:text="@string/feedback"-->
+                <!--android:textColor="@color/font_major_dark"-->
+                <!--android:textSize="16sp"/>-->
 
             <include
                 android:layout_width="match_parent"
