--- a/app/src/main/res/layout/activity_guide_input_contact.xml
+++ b/app/src/main/res/layout/activity_guide_input_contact.xml
@@ -32,14 +32,14 @@
             android:textSize="20sp"/>
 
         <TextView
-            android:id="@+id/completeTextView"
+            android:id="@+id/confirmTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:gravity="center"
-            android:text="@string/complete"
+            android:text="@string/confirm"
             android:textColor="@color/title_text_color"
             android:textSize="16sp"/>
         
