--- a/app/src/main/res/layout/activity_me_bank_number.xml
+++ b/app/src/main/res/layout/activity_me_bank_number.xml
@@ -60,6 +60,7 @@
         android:background="@color/major_light"
         android:hint="@string/input_bank_account"
         android:inputType="number"
+        android:maxLength="25"
         android:textColor="@color/font_major_dark"
         android:textSize="16sp"
         android:textCursorDrawable="@null"/>
