--- a/app/src/main/res/layout/view_stat_mine.xml
+++ b/app/src/main/res/layout/view_stat_mine.xml
@@ -266,4 +266,39 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"/>
 
+    <RelativeLayout
+        android:id="@+id/tagTitleLayout"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:orientation="horizontal"
+        android:background="@color/list_item_header">
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            layout="@layout/view_divider"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:text="@string/stat_by_tag"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="14sp"/>
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            layout="@layout/view_divider"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/tagLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/>
+
 </LinearLayout>
