--- a/app/src/main/res/layout/activity_me_bind_email.xml
+++ b/app/src/main/res/layout/activity_me_bind_email.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/email"
+            android:text="@string/bind_email"
             android:textColor="@color/major_light"
             android:textSize="20sp"/>
 
