--- a/app/src/main/res/layout/activity_me_bind_phone.xml
+++ b/app/src/main/res/layout/activity_me_bind_phone.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/phone"
+            android:text="@string/bind_phone"
             android:textColor="@color/major_light"
             android:textSize="20sp"/>
 
