--- a/app/src/main/res/layout/view_stat_second.xml
+++ b/app/src/main/res/layout/view_stat_second.xml
@@ -38,7 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="3dp"
-                    android:text="@string/stat_new"
+                    android:text="@string/new_reim"
                     android:textColor="@color/status_approved"
                     android:textSize="14sp"/>
 
@@ -87,6 +87,35 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/categoryTitleLayout"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:background="@color/list_item_header">
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            layout="@layout/view_divider"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:gravity="center_vertical"
+            android:text="@string/stat_by_category"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="14sp"/>
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            layout="@layout/view_divider"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/pieLayout"
