improve process of creating company in guide

--- a/app/src/main/res/layout/view_stat_second.xml
+++ b/app/src/main/res/layout/view_stat_second.xml
@@ -227,7 +227,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="16dp"
-                android:text="@string/cost_total"
+                android:text="@string/stat_by_month"
                 android:textColor="@color/font_list_item_header"
                 android:textSize="14sp"/>
 
