--- a/app/src/main/res/layout/activity_me_set_password.xml
+++ b/app/src/main/res/layout/activity_me_set_password.xml
@@ -48,6 +48,7 @@
         android:paddingRight="16dp"
         android:background="@color/major_light"
         android:hint="@string/input_password"
+        android:inputType="textEmailAddress"
         android:textColor="@color/font_major_dark"
         android:textSize="16sp"
         android:textCursorDrawable="@null"/>
@@ -65,6 +66,7 @@
         android:paddingRight="16dp"
         android:background="@color/major_light"
         android:hint="@string/input_confirm_password"
+        android:inputType="textEmailAddress"
         android:textColor="@color/font_major_dark"
         android:textSize="16sp"
         android:textCursorDrawable="@null"/>
