--- a/app/src/main/res/layout/activity_reim_show.xml
+++ b/app/src/main/res/layout/activity_reim_show.xml
@@ -57,26 +57,29 @@
 	                android:textSize="14sp"/>
 
 	            <LinearLayout
+                    android:id="@+id/amountLayout"
 	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/statusTextView"
 	                android:layout_marginTop="24dp"
 	                android:layout_marginLeft="16dp"
-	                android:layout_marginRight="16dp">
+	                android:layout_marginRight="6dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/rmb_symbol"
+                        android:textColor="@color/major_dark"
+                        android:textSize="18sp"/>
 
 	                <TextView
 	                    android:id="@+id/amountTextView"
-	                    android:layout_width="wrap_content"
+	                    android:layout_width="0dp"
 	                    android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="6dp"
 	                    android:textColor="@color/font_reim_number"
 	                    android:textSize="54sp"/>
-
-	                <TextView
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:layout_marginLeft="6dp"
-	                    android:text="@string/rmb_symbol"
-	                    android:textColor="@color/major_dark"
-	                    android:textSize="18sp"/>
 
 	            </LinearLayout>
 
@@ -89,6 +92,19 @@
 	                android:layout_marginRight="16dp"
 	                android:textColor="@color/font_budget"
 	                android:textSize="14sp"/>
+
+                <TextView
+                    android:id="@+id/statusTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/amountLayout"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="8dp"
+                    android:paddingLeft="3dp"
+                    android:paddingRight="3dp"
+                    android:gravity="center"
+                    android:textColor="@color/major_light"/>
 	            
 	        </RelativeLayout>
             
